Ejercicio 6 y 7 solucionados. Ojo el 7 modifica anteriores, para verlos hacer checkout

--- a/app/ejercicio5_solucionado.html
+++ b/app/ejercicio5_solucionado.html
@@ -473,11 +473,9 @@
                 "targets": [3],
                 "searchable": false,
                 "visible": false
-
             }
-
-            ]
-
+            ],
+             stateSave: true
         });
     });
     </script>
