--- a/app/ejercicio6_solucionado.html
+++ b/app/ejercicio6_solucionado.html
@@ -453,34 +453,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <!-- build:js({app,.tmp}) scripts/ejercicio6.js -->
+    <script src="scripts/ejercicio6.js"></script>
     <!-- endbuild -->
-    <script>
-    $(document).ready(function() {
-        $('#miTabla').DataTable({
-            /* "paging": false,
-             "filter": false,*/
-            "order": [
-                [0, "asc"]
-            ],
-            "columnDefs": [
-            {
-                "targets": [2],
-                "visible": false,
-            },
-            {
-                "targets": [3],
-                "searchable": false,
-                "visible": false
-
-            }
-
-            ]
-
-        });
-    });
-    </script>
 </body>
 
 </html>
